--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "bower": "~1",
     "del": "~1",
-    "gulp": "~3",
+    "gulp-angular-filesort": "~1",
+    "gulp-angular-templatecache": "~1",
     "gulp-autoprefixer": "~2",
     "gulp-bower": "~0",
     "gulp-coffee": "~2",
@@ -30,6 +31,7 @@
     "gulp-livereload": "~3",
     "gulp-load-plugins": "~0",
     "gulp-minify-css": "~0",
+    "gulp-ng-classify": "~4",
     "gulp-plumber": "~1",
     "gulp-rename": "~1",
     "gulp-sequence": "~0",
@@ -39,6 +41,7 @@
     "gulp-uglify": "~1",
     "gulp-util": "~3",
     "gulp-zip": "~2",
+    "gulp": "~3",
     "main-bower-files": "~2",
     "merge-stream": "~0",
     "minimist": "~1"
