--- a/bower.json
+++ b/bower.json
@@ -3,17 +3,27 @@
   "dependencies": {
     "angular": "~1",
     "angular-route": "~1",
+    "angular-bootstrap-show-errors": "~2",
+    "angular-ladda": "~0",
     "bootstrap": "~3",
     "font-awesome": "~4",
     "lesshat": "~3",
-    "moment": "~2"
+    "moment": "~2",
+    "ladda": "~0",
+    "spinjs": "~2"
   },
   "overrides": {
     "bootstrap": {
-      "main": ["less/**", "fonts/*"]
+      "main": [
+        "less/**",
+        "fonts/*"
+      ]
     },
     "font-awesome": {
-      "main": ["less/*", "fonts/*"]
+      "main": [
+        "less/*",
+        "fonts/*"
+      ]
     }
   }
 }
