Removing the fat, there is an infinite loop somewhere in the template loading.

--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,11 @@
   "dependencies": {
     "angular": "~1",
     "angular-route": "~1",
-    "angular-bootstrap-show-errors": "~2",
-    "angular-ladda": "~0",
     "angular-bootstrap": "~0",
     "bootstrap": "~3",
     "font-awesome": "~4",
     "jquery": "~2",
-    "moment": "~2",
-    "ladda": "~0",
-    "spinjs": "~2"
+    "moment": "~2"
   },
   "overrides": {
     "bootstrap": {
