Reset gae to a fully working state. Separated base.html for server side and index.html for client side rendering

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   },
   "overrides": {
     "bootstrap": {
-      "main": ["less/**", "fonts/*", "js/{transition,collapse}.js"]
+      "main": ["less/**", "fonts/*", "js/*.js"]
     },
     "angular-ui-bootstrap": {
       "main": ["*.js"]
